--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
         <p>$4000</p>
 <div class="boton-carrito">
   <button onclick="agregarAlCarrito('Planchita Flequillera', 4000)" class="btn">Agregar al carrito</button>
-</div>      </div>
+</div>    
+  </div>
   
     </div>
   </section>
@@ -138,7 +139,7 @@
         <h4>Serum.</h4>
         <p>$5000</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('serum', 5000)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -146,7 +147,7 @@
         <h4>Agua Micelar.</h4>
         <p>$5000</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Agua micelar', 5000)" class="btn">Agregar al carrito</button>
         </div>
       </div>
             <div class="producto">
@@ -154,7 +155,7 @@
         <h4>Baba de Caracol.</h4>
         <p>$4500</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Baba de caracol', 4500)" class="btn">Agregar al carrito</button>
         </div>
       </div>
 
@@ -163,7 +164,7 @@
         <h4>Espatula.</h4>
         <p>$2000</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Espatula', 2000)" class="btn">Agregar al carrito</button>
         </div>
       </div>
             <div class="producto">
@@ -171,7 +172,7 @@
         <h4>Toallitas Comprimidas.</h4>
         <p>$3400</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Planchita FlequilleraToallitas comprimidas', 3400)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -179,7 +180,7 @@
         <h4>Mini-toallitas desmaquillantes.</h4>
         <p>$1300</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Mini-toallita desmaquillantes', 1300)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -187,7 +188,7 @@
         <h4>Cepillo con Espatula.</h4>
         <p>$2400</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Cepillo con espatula', 2400)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -195,7 +196,7 @@
         <h4>Limpiador Facial Pulpito.</h4>
         <p>$2100</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Limpiador facial pulpito', 2100)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -203,7 +204,7 @@
         <h4>Paleta de Silicona Aplicadora con Cuchara Facial.</h4>
         <p>$1500</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Paleta de silicona aplicadora con cuchara facial', 1500)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -211,15 +212,14 @@
         <h4>Vaporizador.</h4>
         <p>$4000</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Vaporizador', 4000)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
         <img src="images//skincare/sk11.jpeg" alt="Skincare producto" onclick="abrirImagen(this)" data-descripcion="Mascarilla facial con acido hialuronico utilizadas para hidratar piel seca y nutrirla. Cantidad x paquete 1 unidad.">
         <h4>Mascarilla Facial.</h4>
         <p>$1500</p>
-        <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Mascara facial', 1500)" class="btn">Agregar al carrito</button>
         </div>
       </div>
 
@@ -244,7 +244,7 @@
         <h4>Balsamo frutal.</h4>
         <p>$1200</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Balsamo frutal', 1200)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -252,7 +252,7 @@
         <h4>Labial Voluminizador.</h4>
         <p>$1500</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Labial voluminizador', 1500)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -260,7 +260,7 @@
         <h4>Esponjitas.</h4>
         <p>$1500</p>
         <div class="boton-carrito">
-       <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Esponjitas', 1500)" class="btn">Agregar al carrito</button>
        </div>
       </div>
             <div class="producto">
@@ -268,7 +268,7 @@
         <h4>Labiales.</h4>
         <p>$1200</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Labiales', 1200)" class="btn">Agregar al carrito</button>
         </div>
       </div>
             <div class="producto">
@@ -276,7 +276,7 @@
         <h4>Delineador de Labios.</h4>
         <p>$1000</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Delineador de labios', 1000)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -284,7 +284,7 @@
         <h4>Balsamo Labial.</h4>
         <p>$1400</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Balsamo labial', 1400)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -292,15 +292,15 @@
         <h4>Sombras de Ojos.</h4>
         <p>$3500</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Sombra de ojos', 3500)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
         <img src="images//maquillaje/mq8.jpeg" alt="Producto maquillaje" onclick="abrirImagen(this)" data-descripcion="">
-        <h4>Creama para Manos.</h4>
+        <h4>Crema para Manos.</h4>
         <p>$2000</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Crema para manos', 2000)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -308,7 +308,7 @@
         <h4>Tinta Labial.</h4>
         <p>$1500</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Tinta labial', 1500)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -316,7 +316,7 @@
         <h4>Delineador de ojos en Lapiz.</h4>
         <p>$1200</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Delineador de ojos lapiz', 1200)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -324,7 +324,7 @@
         <h4>Iluminador retractil en Lapiz.</h4>
         <p>$1800</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Iluminador retractil lapiz', 1800)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -332,7 +332,7 @@
         <h4>Base Liquida.</h4>
         <p>$2000</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Base liquida', 2000)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -340,7 +340,7 @@
         <h4>Set de Brochas x12.</h4>
         <p>$5000</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Set de brochas x12', 5000)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -348,7 +348,7 @@
         <h4>Mascarilla hidratante frutal labios.</h4>
         <p>$1800</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Mascarilla hidratante frutal labios', 1800)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -356,7 +356,7 @@
         <h4>Polvo de Hadas Roll-On.</h4>
         <p>$1400</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Polvo de hadas', 1400)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -364,7 +364,7 @@
         <h4>Paletas de Sombra Stitch.</h4>
         <p>$6500</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Paleta de sombra stitch', 6500)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -372,7 +372,7 @@
         <h4>Perfilador de Cejas.</h4>
         <p>$1200</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Perfilador de cejas', 1200)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -380,7 +380,7 @@
         <h4>Lip Gloss.</h4>
         <p>$1800</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Lip gloss', 1800)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -388,7 +388,7 @@
         <h4>Rubor.</h4>
         <p>$1800</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Rubor', 1800)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -396,7 +396,7 @@
         <h4>Balsamo Labial.</h4>
         <p>$1300</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Balsamo labial', 1300)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -404,7 +404,7 @@
         <h4>Polvo Compacto.</h4>
         <p>$2000</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Polvo compacto', 2000)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -412,7 +412,7 @@
         <h4>Labial mate.</h4>
         <p>$1500</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Labial mate', 1500)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -420,7 +420,7 @@
         <h4>Delineador Liquido.</h4>
         <p>$1800</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Delineador liquido', 1800)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -428,7 +428,7 @@
         <h4>Tinta Labial.</h4>
         <p>$1800</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Tinta labial', 1800)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -436,7 +436,7 @@
         <h4>Polvo Fijador Volatil.</h4>
         <p>$1800</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Polvo fijador volatil', 1800)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -444,7 +444,7 @@
         <h4>Fibra 2 en 1 delineador+cejas.</h4>
         <p>$3000</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Fibra 2 en 1delineador+cejas', 3000)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -452,7 +452,7 @@
         <h4>Delineador retractil.</h4>
         <p>$1200</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Delineador retractil', 1200)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -460,7 +460,7 @@
         <h4>Mascara de Pestañas.</h4>
         <p>$2300</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Mascara de pestañas', 2300)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -468,7 +468,7 @@
         <h4>Corrector+Iluminador 2 en 1.</h4>
         <p>$3300</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Corrector+iluminador', 3300)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -476,7 +476,7 @@
         <h4>Set de brochas cola de sirena.</h4>
         <p>$2100</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Set de brochas cola de sirena', 2100)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -484,7 +484,7 @@
         <h4>Paleta de Sombra de Stitch.</h4>
         <p>$8000</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Paleta de sombra stitch', 8000)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -492,7 +492,7 @@
         <h4>Repuesto para Arqueador.</h4>
         <p>$1000</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Repuesto arqueador', 1000)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -500,7 +500,7 @@
         <h4>Sombras.</h4>
         <p>$3500</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Sombras', 3500)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -508,7 +508,7 @@
         <h4>Brillo Labial.</h4>
         <p>$1200</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Brillo labial', 1200)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -516,7 +516,7 @@
         <h4>Mascara para Pestañas Incoloro.</h4>
         <p>$2000</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Mascara para pestañas incolora', 2000)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -524,7 +524,7 @@
         <h4>Corrector de ojeras.</h4>
         <p>$1300</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Corrector de ojeras', 1300)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -532,7 +532,7 @@
         <h4>Arqueador para Petañas.</h4>
         <p>$1300</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Arqueador para pestañas', 1300)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -540,7 +540,7 @@
         <h4>Brillo para la cara.</h4>
         <p>$1000</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Brillo para la cara', 1000)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -548,7 +548,7 @@
         <h4>Labial matte lip gloss.</h4>
         <p>$1500</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Labial matte lip gloss', 1500)" class="btn">Agregar al carrito</button>
         </div>
       </div>
       <div class="producto">
@@ -556,7 +556,7 @@
         <h4>Sombras.</h4>
         <p>$1500</p>
         <div class="boton-carrito">
-        <a href="#" class="btn">Agregar al carrito</a>
+  <button onclick="agregarAlCarrito('Sombras', 1500)" class="btn">Agregar al carrito</button>
         </div>
       </div>
 
