--- a/carrito.html
+++ b/carrito.html
@@ -40,7 +40,7 @@
     </div>
   </section>
 
-<form id="form-carrito" action="https://formspree.io/f/xykedrnd" method="POST" class="formulario-compra">
+<form id="form-carrito" action="https://formspree.io/f/xykedrnd" method="POST" class="formulario-compra" style="display:none;">
   <h3>Datos personales</h3>
 
   <div class="campo">
