--- a/carrito.html
+++ b/carrito.html
@@ -54,8 +54,8 @@
   </div>
 
   <div class="campo">
-    <label for="email">Correo electrónico</label>
-    <input type="email" name="email" id="email" required>
+    <label for="email">Correo electrónico (opcional)</label>
+    <input type="email" name="email" id="email" >
   </div>
 
   <div class="campo">
