--- a/promociones.html
+++ b/promociones.html
@@ -20,25 +20,19 @@
     <h1>Promociones Exclusivas</h1>
     <p>Descubrí los combos, descuentos y productos destacados que tenemos para vos.</p>
 
-    <div class="promo">
-      <h3>Combo Skincare x3</h3>
-      <p>Incluye limpiador, tónico y serum. Precio especial: $8500</p>
-    </div>
+<div class="promo">
+  <h4>Combo Skincare x3</h4>
+  <p>Incluye: limpiador, tónico y serum</p>
+  <p>Precio: $8500</p>
+  <button onclick="agregarPromo('Combo Skincare x3', 8500, 'Limpiador, Tónico, Serum')">Agregar al carrito</button>
+</div>
 
-    <div class="promo">
-      <h3>Pack Maquillaje Profesional</h3>
-      <p>Base + labial + paleta de sombras. Precio: $6900</p>
-    </div>
-
-        <div class="promo">
-      <h3>Pack Maquillaje Profesional</h3>
-      <p>Base + labial + paleta de sombras. Precio: $6900</p>
-    </div>
-
-        <div class="promo">
-      <h3>Pack Maquillaje Profesional</h3>
-      <p>Base + labial + paleta de sombras. Precio: $6900</p>
-    </div>
+<div class="promo">
+  <h4>Pack Maquillaje Profesional</h4>
+  <p>Incluye: base, labial, paleta de sombras</p>
+  <p>Precio: $6900</p>
+  <button onclick="agregarPromo('Pack Maquillaje Profesional', 6900, 'Base, Labial, Paleta de sombras')">Agregar al carrito</button>
+</div>
 
     <!-- Agregá más promos acá -->
 
